axios import issue resolve 3

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "start": "serve -s build",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:nowatch": " set CI=true && react-scripts test --coverage",
+    "test:nowatch": " set CI=true && react-scripts test --coverage --transformIgnorePatterns \"node_modules/(?!axios)/\"",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
